crates/idl-java/tests/snapshots/snapshot_codegen__snapshot_amqp_helpers_struct.snap
---
source: crates/idl-java/tests/snapshot_codegen.rs
expression: "gen_with_amqp(\"struct Sensor { long id; double temp; };\")"
---
// === FILE: /Sensor.java ===
// Generated by zerodds idl-java. Do not edit.
public class Sensor implements org.omg.dds.topic.TopicType<Sensor> {
    private int id;
    private double temp;

    public Sensor() {}

    public int getId() { return id; }
    public void setId(int id) { this.id = id; }
    public double getTemp() { return temp; }
    public void setTemp(double temp) { this.temp = temp; }
}

// === FILE: /SensorAmqpCodec.java ===
// Generated by zerodds idl-java. Do not edit.
// Spec §7.2.3 / §8.1.2 / §8.1.3 — AMQP-Bindings.
public final class SensorAmqpCodec {
    private SensorAmqpCodec() {}

    public static org.zerodds.amqp.Value toAmqpValue(Sensor v_) {
        org.zerodds.amqp.StructBuilder b_ = new org.zerodds.amqp.StructBuilder("Sensor");
        b_.fieldInt32("id", v_.id());
        b_.fieldDouble("temp", v_.temp());
        return b_.build();
    }

    public static String toJsonString(Sensor v_) {
        return org.zerodds.amqp.Codec.toJson(toAmqpValue(v_));
    }
}
