crates/idl-java/tests/snapshots/snapshot_codegen__snapshot_amqp_helpers_union.snap
---
source: crates/idl-java/tests/snapshot_codegen.rs
expression: "gen_with_amqp(\"union U switch (long) { case 1: long a; case 2: double b; };\")"
---
// === FILE: /U.java ===
// Generated by zerodds idl-java. Do not edit.
public sealed interface U permits U.A, U.B {
    // case 1 -> a
    // case 2 -> b
    // no explicit 'default:' branch

    record A(int a) implements U {}
    record B(double b) implements U {}
}

// === FILE: /UAmqpCodec.java ===
// Generated by zerodds idl-java. Do not edit.
// Spec §7.2.3 — Union als AMQP-list [disc, branch?].
public final class UAmqpCodec {
    private UAmqpCodec() {}

    public static org.zerodds.amqp.Value toAmqpValue(U u_) {
        if (u_ instanceof U.A rec_) {
            return org.zerodds.amqp.Codec.makeUnionBody(org.zerodds.amqp.Codec.int32Value(1), org.zerodds.amqp.Codec.int32Value(rec_.a()));
        }
        if (u_ instanceof U.B rec_) {
            return org.zerodds.amqp.Codec.makeUnionBody(org.zerodds.amqp.Codec.int32Value(2), org.zerodds.amqp.Codec.doubleValue(rec_.b()));
        }
        return org.zerodds.amqp.Codec.makeUnionBody(org.zerodds.amqp.Codec.int32Value(0));
    }

    public static String toJsonString(U u_) {
        return org.zerodds.amqp.Codec.toJson(toAmqpValue(u_));
    }
}
