crates/idl-java/tests/snapshots/snapshot_codegen__snapshot_enum.snap
---
source: crates/idl-java/tests/snapshot_codegen.rs
expression: "gen_default(\"enum Color { RED, GREEN, BLUE };\")"
---
// === FILE: /Color.java ===
// Generated by zerodds idl-java. Do not edit.
public enum Color {
    RED(0),
    GREEN(1),
    BLUE(2);

    private final int value;
    Color(int value) { this.value = value; }
    public int value() { return value; }
}
