crates/idl-java/tests/snapshots/snapshot_codegen__snapshot_inheritance.snap
---
source: crates/idl-java/tests/snapshot_codegen.rs
expression: "gen_default(\"struct Base { long base_field; }; struct Child : Base { long child_field; };\")"
---
// === FILE: /Base.java ===
// Generated by zerodds idl-java. Do not edit.
public class Base implements org.omg.dds.topic.TopicType<Base> {
    private int base_field;

    public Base() {}

    public int getBase_field() { return base_field; }
    public void setBase_field(int base_field) { this.base_field = base_field; }
}

// === FILE: /BaseInterface.java ===
// Generated by zerodds idl-java. Do not edit.
/** Companion interface for Base; lets sub-sub-classes participate in the Base contract via `implements`. */
public interface BaseInterface {
    int getBase_field();
}

// === FILE: /Child.java ===
// Generated by zerodds idl-java. Do not edit.
public class Child extends Base {
    private int child_field;

    public Child() {}

    public int getChild_field() { return child_field; }
    public void setChild_field(int child_field) { this.child_field = child_field; }
}
