crates/idl-java/tests/snapshots/snapshot_codegen__snapshot_module_nesting.snap
---
source: crates/idl-java/tests/snapshot_codegen.rs
expression: "gen_default(\"module Outer { module Inner { struct S { long x; }; }; };\")"
---
// === FILE: outer.inner/S.java ===
// Generated by zerodds idl-java. Do not edit.
package outer.inner;

public class S implements org.omg.dds.topic.TopicType<S> {
    private int x;

    public S() {}

    public int getX() { return x; }
    public void setX(int x) { this.x = x; }
}
