crates/idl-java/tests/snapshots/snapshot_codegen__snapshot_simple_struct.snap
---
source: crates/idl-java/tests/snapshot_codegen.rs
expression: "gen_default(\"struct Point { long x; long y; };\")"
---
// === FILE: /Point.java ===
// Generated by zerodds idl-java. Do not edit.
public class Point implements org.omg.dds.topic.TopicType<Point> {
    private int x;
    private int y;

    public Point() {}

    public int getX() { return x; }
    public void setX(int x) { this.x = x; }
    public int getY() { return y; }
    public void setY(int y) { this.y = y; }
}
