crates/idl-java/tests/snapshots/snapshot_codegen__snapshot_struct_with_string_and_sequence.snap
---
source: crates/idl-java/tests/snapshot_codegen.rs
expression: "gen_default(\"struct Bag { string name; sequence<long> ids; };\")"
---
// === FILE: /Bag.java ===
// Generated by zerodds idl-java. Do not edit.
public class Bag implements org.omg.dds.topic.TopicType<Bag> {
    private String name;
    private java.util.List<Integer> ids;

    public Bag() {}

    public String getName() { return name; }
    public void setName(String name) { this.name = name; }
    public java.util.List<Integer> getIds() { return ids; }
    public void setIds(java.util.List<Integer> ids) { this.ids = ids; }
}
