crates/idl-java/tests/snapshots/snapshot_codegen__snapshot_typesupport_final_struct.snap
---
source: crates/idl-java/tests/snapshot_codegen.rs
expression: "gen_typesupport(\"@final struct Point { long x; long y; };\")"
---
// === FILE: /PointTypeSupport.java ===
// Generated by zerodds idl-java. Do not edit.
/** XCDR2 TypeSupport for Point. Generated by zerodds idl-java. */
public final class PointTypeSupport implements org.zerodds.cdr.TopicTypeSupport<Point> {
    public static final PointTypeSupport INSTANCE = new PointTypeSupport();

    private PointTypeSupport() {}

    @Override
    public String getTypeName() { return "Point"; }

    @Override
    public boolean isKeyed() { return false; }

    @Override
    public org.zerodds.cdr.ExtensibilityKind getExtensibility() { return org.zerodds.cdr.ExtensibilityKind.FINAL; }

    @Override
    public byte[] typeObject() { return TYPE_OBJECT.clone(); }
    private static final byte[] TYPE_OBJECT = new byte[] {
        (byte) 0xf2, (byte) 0x51, (byte) 0x01, (byte) 0x00, (byte) 0x0e, (byte) 0x00, (byte) 0x00, (byte) 0x00, (byte) 0x00, (byte) 0x00, (byte) 0x00, (byte) 0x00, 
        (byte) 0x06, (byte) 0x00, (byte) 0x00, (byte) 0x00, (byte) 0x50, (byte) 0x6f, (byte) 0x69, (byte) 0x6e, (byte) 0x74, (byte) 0x00, (byte) 0x00, (byte) 0x00, 
        (byte) 0x2c, (byte) 0x00, (byte) 0x00, (byte) 0x00, (byte) 0x02, (byte) 0x00, (byte) 0x00, (byte) 0x00, (byte) 0x10, (byte) 0x00, (byte) 0x00, (byte) 0x00, 
        (byte) 0x00, (byte) 0x00, (byte) 0x00, (byte) 0x00, (byte) 0x01, (byte) 0x00, (byte) 0x04, (byte) 0x00, (byte) 0x02, (byte) 0x00, (byte) 0x00, (byte) 0x00, 
        (byte) 0x78, (byte) 0x00, (byte) 0x00, (byte) 0x00, (byte) 0x10, (byte) 0x00, (byte) 0x00, (byte) 0x00, (byte) 0x01, (byte) 0x00, (byte) 0x00, (byte) 0x00, 
        (byte) 0x01, (byte) 0x00, (byte) 0x04, (byte) 0x00, (byte) 0x02, (byte) 0x00, (byte) 0x00, (byte) 0x00, (byte) 0x79, (byte) 0x00, (byte) 0x00, (byte) 0x00, 
    };

    @Override
    public byte[] encode(Point sample) { return encode(sample, org.zerodds.cdr.EndianMode.LITTLE_ENDIAN); }

    @Override
    public byte[] encode(Point sample, org.zerodds.cdr.EndianMode endian) { return encode(sample, endian, 1); }

    public byte[] encode(Point sample, org.zerodds.cdr.EndianMode endian, int representation) {
        int __maxAlign = representation == 0 ? org.zerodds.cdr.Xcdr2Writer.XCDR1_MAX_ALIGN_VALUE : 4;
        org.zerodds.cdr.Xcdr2Writer w = new org.zerodds.cdr.Xcdr2Writer(endian, __maxAlign);
        w.writeInt32(sample.getX());
        w.writeInt32(sample.getY());
        return w.toByteArray();
    }

    @Override
    public Point decode(byte[] bytes) { return decode(bytes, 0, bytes.length); }

    @Override
    public Point decode(byte[] bytes, int offset, int length) { return decode(bytes, offset, length, org.zerodds.cdr.EndianMode.LITTLE_ENDIAN); }
    public Point decode(byte[] bytes, int offset, int length, org.zerodds.cdr.EndianMode endian) { return decode(bytes, offset, length, endian, 1); }
    public Point decode(byte[] bytes, int offset, int length, org.zerodds.cdr.EndianMode endian, int representation) {
        int __maxAlign = representation == 0 ? org.zerodds.cdr.Xcdr2Reader.XCDR1_MAX_ALIGN_VALUE : 4;
        org.zerodds.cdr.Xcdr2Reader r = new org.zerodds.cdr.Xcdr2Reader(bytes, offset, length, endian, __maxAlign);
        return decodeFrom(r);
    }

    public static Point decodeFrom(org.zerodds.cdr.Xcdr2Reader r) {
        Point v = new Point();
        {
            int __rv = r.readInt32();
            v.setX(__rv);
        }
        {
            int __rv = r.readInt32();
            v.setY(__rv);
        }
        return v;
    }

    @Override
    public byte[] keyHash(Point sample) {
        return new byte[16];
    }

    private static void skipByLc(org.zerodds.cdr.Xcdr2Reader r, int lc) {
        switch (lc) {
            case 0: r.skip(1); break;
            case 1: r.skip(2); break;
            case 2: r.skip(4); break;
            case 3: r.skip(8); break;
            default: { int __n = r.readNextInt(); r.skip(__n); break; }
        }
    }

    private static byte[] readDelimitedFrame(org.zerodds.cdr.Xcdr2Reader r) {
        int __sz = r.readDHeader();
        byte[] __body = r.readBytes(__sz);
        byte[] __frame = new byte[4 + __sz];
        __frame[0] = (byte) (__sz & 0xFF); __frame[1] = (byte) ((__sz >>> 8) & 0xFF);
        __frame[2] = (byte) ((__sz >>> 16) & 0xFF); __frame[3] = (byte) ((__sz >>> 24) & 0xFF);
        System.arraycopy(__body, 0, __frame, 4, __sz);
        return __frame;
    }
}
