crates/idl-java/tests/snapshots/snapshot_codegen__snapshot_typesupport_mutable_struct.snap
---
source: crates/idl-java/tests/snapshot_codegen.rs
expression: "gen_typesupport(\"@mutable struct M { @id(1) long a; @id(2) string b; };\")"
---
// === FILE: /MTypeSupport.java ===
// Generated by zerodds idl-java. Do not edit.
/** XCDR2 TypeSupport for M. Generated by zerodds idl-java. */
public final class MTypeSupport implements org.zerodds.cdr.TopicTypeSupport<M> {
    public static final MTypeSupport INSTANCE = new MTypeSupport();

    private MTypeSupport() {}

    @Override
    public String getTypeName() { return "M"; }

    @Override
    public boolean isKeyed() { return false; }

    @Override
    public org.zerodds.cdr.ExtensibilityKind getExtensibility() { return org.zerodds.cdr.ExtensibilityKind.MUTABLE; }

    @Override
    public byte[] encode(M sample) { return encode(sample, org.zerodds.cdr.EndianMode.LITTLE_ENDIAN); }

    @Override
    public byte[] encode(M sample, org.zerodds.cdr.EndianMode endian) {
        org.zerodds.cdr.Xcdr2Writer w = new org.zerodds.cdr.Xcdr2Writer(endian);
        int __dh = w.beginMutable();
        w.writeEmHeader(1, org.zerodds.cdr.Xcdr2Writer.LC_INT32, false);
        w.writeInt32(sample.getA());
        w.writeEmHeader(2, org.zerodds.cdr.Xcdr2Writer.LC_NEXTINT, false);
        w.writeString(sample.getB());
        w.endDelimited(__dh);
        return w.toByteArray();
    }

    @Override
    public M decode(byte[] bytes) { return decode(bytes, 0, bytes.length); }

    @Override
    public M decode(byte[] bytes, int offset, int length) {
        org.zerodds.cdr.Xcdr2Reader r = new org.zerodds.cdr.Xcdr2Reader(bytes, offset, length, org.zerodds.cdr.EndianMode.LITTLE_ENDIAN);
        M v = new M();
        int __dhSize = r.readDHeader();
        int __endPos = r.position() + __dhSize;
        while (r.position() < __endPos) {
            org.zerodds.cdr.Xcdr2Reader.EmHeader __em = r.readEmHeader();
            if (__em.memberId == 1) {
                v.setA(r.readInt32());
            }
            else if (__em.memberId == 2) {
                v.setB(r.readString());
            }
            else {
                skipByLc(r, __em.lc);
            }
        }
        return v;
    }

    @Override
    public byte[] keyHash(M sample) {
        return new byte[16];
    }
}
