crates/idl-java/tests/snapshots/snapshot_codegen__snapshot_union.snap
---
source: crates/idl-java/tests/snapshot_codegen.rs
expression: "gen_default(\"union U switch (long) { case 1: long a; case 2: double b; default: octet c; };\")"
---
// === FILE: /U.java ===
// Generated by zerodds idl-java. Do not edit.
public sealed interface U permits U.A, U.B, U.C {
    // case 1 -> a
    // case 2 -> b
    // case default -> c

    record A(int a) implements U {}
    record B(double b) implements U {}
    record C(byte c) implements U {}
}
